fix: the z-index of navbar is smaller than swiper bullet
-change z-index of navbar to 100

--- a/app/assets/style/layout/_layout.scss
+++ b/app/assets/style/layout/_layout.scss
@@ -18,7 +18,7 @@
 }
 
 header {
-    z-index: 10;
+    z-index: 100;
     width: 100%;
 }
 
